--- a/frontend/package.json
+++ b/frontend/package.json
@@ -48,6 +48,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@eslint/js": "^9.10.0",
     "@types/eslint__js": "^8.42.3",
     "eslint": "^8.57.0",
